@@ -189,3 +189,5 @@ Activando el maximo turbo permitido, tambien hace una franja negra en el border,
 -captura master system en gitlab readme
 
 -mensajes splash en cambio de modo maquinas con vdp
+
+-mejorar deteccion de sonido sonando si/no en QL y SN
